--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,29 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+		
+		<!-- Google Analytics - loads only after consent -->
+		<script>
+			// Default to denied until user consent
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('consent', 'default', {
+				'analytics_storage': 'denied'
+			});
+		</script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-D7ZNZ6XCX6"></script>
+		<script>
+			gtag('js', new Date());
+			gtag('config', 'G-D7ZNZ6XCX6');
+			
+			// Check if user already accepted cookies
+			if (localStorage.getItem('cookieConsent') === 'accepted') {
+				gtag('consent', 'update', {
+					'analytics_storage': 'granted'
+				});
+			}
+		</script>
+		
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
